Hot Fix: Prevent body strech/overflow by limiting  SVG image inside a container

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,17 +144,24 @@ header {
     margin-bottom: -2px;
 }
 
+.profile-image-wrap {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .profile-dev-photo {
     position: absolute;
-    top: 42vh;
+    top: 32vh;
     left: 5%;
     width: 21%;
 }
 
 .profile-ui-photo {
-    position: absolute;
-    top: 21vh;
-    left: 82%;
+    position: relative;
+    top: 10vh;
+    left: 55%;
     width: 50%;
 }
 
@@ -170,36 +177,20 @@ header {
 
 @keyframes ComeInside
 {
-    100%    {left: 69%;}
+    100%    {left: 44%;}
 }
 
 @media screen and (max-width: 992px) {
     .profile-dev-photo {
         position: absolute;
-        top: 48vh;
+        top: 38vh;
         left: 5%;
         width: 14%;
     }
     
     .profile-ui-photo {
         position: absolute;
-        top: 46vh;
-        left: 82%;
-        width: 14%;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .profile-dev-photo {
-        position: absolute;
-        top: 48vh;
-        left: 5%;
-        width: 14%;
-    }
-    
-    .profile-ui-photo {
-        position: absolute;
-        top: 46vh;
+        top: 38vh;
         left: 82%;
         width: 14%;
     }
